--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,7 +8,7 @@
 
     <item android:id="@+id/news"
         android:icon="@drawable/tracker"
-        android:title="Tips n' News">
+        android:title="News">
     </item>
 
     <item android:id="@+id/tracker"
