--- a/app/src/main/res/layout/activity_fractures.xml
+++ b/app/src/main/res/layout/activity_fractures.xml
@@ -1,231 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.examples.android.healthcross.Fractures">
-
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/Drawer_Layout"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <ScrollView
-            android:background="@color/colorBackground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:scrollbars = "vertical"
-            android:scrollbarStyle="insideOverlay">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <GridLayout
-                android:columnCount="1"
-                android:columnOrderPreserved="false"
-                android:rowCount="5"
-                android:alignmentMode="alignMargins"
-                android:layout_weight="7"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:padding="12dp">
-
-                <!-- Row 1 -->
-                <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="1. Stop any bleeding with cloth or clothing."
-                            android:textAlignment="center"
-                            android:textColor="@color/colorFont"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <!-- Row 2 -->
-                <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
-                    >
-                    <!-- Row 2 -->
-                    <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="2. Immobilize the injured area using a splint."
-                            android:textAlignment="center"
-                            android:textColor="@color/colorFont"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <!-- Row 3 -->
-                <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="3. Apply cold to the area for up to 10 minutes at a time."
-                            android:textAlignment="center"
-                            android:textColor="@color/colorFont"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <!-- Row 4 -->
-                <android.support.v7.widget.CardView
-                    android:layout_height="0dp"
-                    android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="4. Treat them for shock, get into a comfortable position."
-                            android:textAlignment="center"
-                            android:textColor="@color/colorFont"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <!-- Row 5 -->
-                <android.support.v7.widget.CardView
-                    android:layout_height="45dp"
-                    android:layout_width="0dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:orientation="vertical"
-                        android:layout_margin="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:text="5.Call 911 or help them get to the emergency department for professional care"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorFont"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-
-            </GridLayout>
-
-
-
-
-        </LinearLayout>
-
-
-        </ScrollView>
-        <android.support.design.widget.NavigationView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:menu="@menu/navigation_menu"
-            android:layout_gravity="start"
-            android:id="@+id/navview"/>
-
-    </android.support.v4.widget.DrawerLayout>
-
-</android.widget.RelativeLayout>
+<?xml version="1.0" encoding="utf-8"?><android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context="com.examples.android.healthcross.Fractures">    <android.support.v4.widget.DrawerLayout        xmlns:android="http://schemas.android.com/apk/res/android"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:id="@+id/Drawer_Layout"        android:layout_alignParentTop="true"        android:layout_alignParentStart="true">        <ScrollView            android:background="@color/colorBackground"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:fillViewport="true"            android:scrollbars = "vertical"            android:scrollbarStyle="insideOverlay">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="vertical">            <GridLayout                android:columnCount="1"                android:columnOrderPreserved="false"                android:rowCount="5"                android:alignmentMode="alignMargins"                android:layout_weight="7"                android:layout_width="match_parent"                android:layout_height="0dp"                android:padding="12dp">                <!-- Row 1 -->                <android.support.v7.widget.CardView                    android:layout_height="0dp"                    android:layout_width="0dp"                    android:layout_columnWeight="1"                    android:layout_rowWeight="1"                    android:layout_marginTop="10dp"                    android:layout_marginBottom="16dp"                    android:layout_marginLeft="6dp"                    android:layout_marginRight="6dp"                    app:cardElevation="6dp"                    app:cardCornerRadius="6dp"                    >                    <LinearLayout                        android:layout_gravity="center_horizontal|center_vertical"                        android:orientation="vertical"                        android:layout_margin="16dp"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content">                        <TextView                            android:text="1. Stop any bleeding with cloth or clothing."                            android:textAlignment="center"                            android:textColor="@color/colorFont"                            android:textSize="18sp"                            android:textStyle="bold"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content" />                    </LinearLayout>                </android.support.v7.widget.CardView>                <!-- Row 2 -->                <android.support.v7.widget.CardView                    android:layout_height="0dp"                    android:layout_width="0dp"                    android:layout_columnWeight="1"                    android:layout_rowWeight="1"                    android:layout_marginBottom="16dp"                    android:layout_marginLeft="6dp"                    android:layout_marginRight="6dp"                    app:cardElevation="6dp"                    app:cardCornerRadius="6dp"                    >                    <!-- Row 2 -->                    <LinearLayout                        android:layout_gravity="center_horizontal|center_vertical"                        android:orientation="vertical"                        android:layout_margin="16dp"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content">                        <TextView                            android:text="2. Immobilize the injured area using a splint."                            android:textAlignment="center"                            android:textColor="@color/colorFont"                            android:textSize="18sp"                            android:textStyle="bold"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content" />                    </LinearLayout>                </android.support.v7.widget.CardView>                <!-- Row 3 -->                <android.support.v7.widget.CardView                    android:layout_height="0dp"                    android:layout_width="0dp"                    android:layout_columnWeight="1"                    android:layout_rowWeight="1"                    android:layout_marginBottom="16dp"                    android:layout_marginLeft="6dp"                    android:layout_marginRight="6dp"                    app:cardElevation="6dp"                    app:cardCornerRadius="6dp"                    >                    <LinearLayout                        android:layout_gravity="center_horizontal|center_vertical"                        android:orientation="vertical"                        android:layout_margin="16dp"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content">                        <TextView                            android:text="3. Apply cold to the area for up to 10 minutes at a time."                            android:textAlignment="center"                            android:textColor="@color/colorFont"                            android:textSize="18sp"                            android:textStyle="bold"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content" />                    </LinearLayout>                </android.support.v7.widget.CardView>                <!-- Row 4 -->                <android.support.v7.widget.CardView                    android:layout_height="0dp"                    android:layout_width="0dp"                    android:layout_columnWeight="1"                    android:layout_rowWeight="1"                    android:layout_marginBottom="16dp"                    android:layout_marginLeft="6dp"                    android:layout_marginRight="6dp"                    app:cardElevation="6dp"                    app:cardCornerRadius="6dp"                    >                    <LinearLayout                        android:layout_gravity="center_horizontal|center_vertical"                        android:orientation="vertical"                        android:layout_margin="16dp"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content">                        <TextView                            android:text="4. Treat them for shock, get into a comfortable position."                            android:textAlignment="center"                            android:textColor="@color/colorFont"                            android:textSize="18sp"                            android:textStyle="bold"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content" />                    </LinearLayout>                </android.support.v7.widget.CardView>                <!-- Row 5 -->                <android.support.v7.widget.CardView                    android:layout_height="45dp"                    android:layout_width="0dp"                    android:layout_columnWeight="1"                    android:layout_rowWeight="1"                    android:layout_marginBottom="16dp"                    android:layout_marginLeft="6dp"                    android:layout_marginRight="6dp"                    app:cardElevation="6dp"                    app:cardCornerRadius="6dp"                    >                    <LinearLayout                        android:layout_gravity="center_horizontal|center_vertical"                        android:orientation="vertical"                        android:layout_margin="16dp"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content">                        <TextView                            android:text="5.Call 911 or help them get to the emergency department for professional care"                            android:textAlignment="center"                            android:textColor="@color/colorFont"                            android:textSize="18sp"                            android:textStyle="bold"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content" />                    </LinearLayout>                </android.support.v7.widget.CardView>            </GridLayout>        </LinearLayout>        </ScrollView>        <android.support.design.widget.NavigationView            android:layout_width="wrap_content"            android:layout_height="match_parent"            app:menu="@menu/navigation_menu"            android:layout_gravity="start"            android:id="@+id/navview"/>    </android.support.v4.widget.DrawerLayout></android.widget.RelativeLayout>
