--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -103,6 +103,14 @@
                 android:textSize="15sp"
                 android:layout_gravity="center"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Powered by NewsApi"
+                android:textSize="15sp"
+                android:layout_gravity="center"/>
+
 
         </LinearLayout>
 
