--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -71,24 +71,28 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/author"
-                    android:textSize="15sp"
+                    android:id="@+id/time"
+                    android:gravity="right"
+                    android:textSize="14sp"
                     android:textColor="#42A5F5"
+                    android:maxLength="10"
+                    android:maxLines="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="News Author" />
+                    android:text="Time" />
+
 
             </LinearLayout>
 
-
             <TextView
-                android:id="@+id/time"
-                android:gravity="right"
-                android:textSize="14sp"
-                android:textColor="#42A5F5"
+                android:id="@+id/author"
+                android:textSize="15sp"
+                android:textColor="#FFFFFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time" />
+                android:text="News Author"
+                />
+
         </LinearLayout>
 
 
