--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -17,8 +17,7 @@
             android:layout_height="match_parent"
             android:fillViewport="true"
             android:scrollbars = "vertical"
-            android:scrollbarStyle="insideOverlay"
-            android:background="@color/colorBackground">
+            android:scrollbarStyle="insideOverlay">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,7 +43,7 @@
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="6dp"
                         app:cardElevation="6dp"
-                        app:cardCornerRadius="6dp">
+                        app:cardCornerRadius="2dp">
 
                         <LinearLayout
                             android:layout_gravity="center_horizontal|center_vertical"
@@ -91,7 +90,7 @@
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="6dp"
                         app:cardElevation="6dp"
-                        app:cardCornerRadius="6dp"
+                        app:cardCornerRadius="2dp"
                         android:onClick="openCalendar">
 
                         <LinearLayout
