--- a/app/src/main/res/layout/activity_burns.xml
+++ b/app/src/main/res/layout/activity_burns.xml
@@ -44,8 +44,8 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginLeft="6dp"
                     android:layout_marginRight="6dp"
-                    app:cardElevation="6dp"
-                    app:cardCornerRadius="6dp"
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="2dp"
                     >
 
                     <LinearLayout
@@ -79,8 +79,8 @@
                     android:layout_marginRight="6dp"
                     android:layout_marginTop="4dp"
                     android:layout_rowWeight="1"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="6dp">
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="2dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -110,8 +110,8 @@
                         android:layout_marginRight="6dp"
                         android:layout_marginTop="4dp"
                         android:layout_rowWeight="1"
-                        app:cardCornerRadius="6dp"
-                        app:cardElevation="6dp">
+                        app:cardElevation="4dp"
+                        app:cardCornerRadius="2dp">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -145,8 +145,8 @@
                     android:layout_marginLeft="6dp"
                     android:layout_marginRight="6dp"
                     android:layout_rowWeight="1"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="6dp">
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="2dp">
                     <!-- Row 2 -->
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -178,8 +178,8 @@
                     android:layout_marginLeft="6dp"
                     android:layout_marginRight="6dp"
                     android:layout_rowWeight="2"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="6dp">
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="2dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -211,8 +211,8 @@
                     android:layout_marginRight="6dp"
                     android:layout_marginTop="4dp"
                     android:layout_rowWeight="1"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="6dp">
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="2dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -229,6 +229,38 @@
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="25sp"
                             android:textStyle="bold" />
+
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_columnWeight="1"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="2dp"
+                    >
+
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:orientation="vertical"
+                        android:layout_margin="16dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:text="• Blisters\n• Pain\n• Peeling Skin\n• Red Skin\n• Shock\n• Swelling\n •White or Charred Skin"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorFont"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
 
                     </LinearLayout>
