--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -48,12 +48,18 @@
                         <LinearLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="horizontal"
-                            android:layout_margin="16dp"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
+                            <ImageView
+                                android:layout_width="100dp"
+                                android:layout_height="75dp"
+                                android:src="@drawable/steps"/>
+
                             <TextView
+                                android:layout_marginLeft="12dp"
                                 android:id="@+id/tv_info"
+                                android:layout_gravity="center_vertical"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="30dp"
@@ -63,6 +69,7 @@
 
                             <TextView
                                 android:id="@+id/tv_steps"
+                                android:layout_gravity="center_vertical"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0"
@@ -70,6 +77,7 @@
                                 android:textSize="25sp" />
 
                             <TextView
+                                android:layout_gravity="center_vertical"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/colorFont"
@@ -95,13 +103,18 @@
                         <LinearLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="horizontal"
-                            android:layout_margin="16dp"
+                            android:layout_marginLeft=""
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
 
+                            <ImageView
+                                android:layout_width="100dp"
+                                android:layout_height="75dp"
+                                android:src="@drawable/calendar"/>
+
                             <TextView
-                                android:layout_centerHorizontal="true"
+                                android:layout_gravity="center_vertical"
                                 android:text="Open Med Calendar"
                                 android:textColor="@color/colorFont"
                                 android:textSize="25sp"
@@ -111,39 +124,6 @@
                         </LinearLayout>
 
                     </android.support.v7.widget.CardView>
-
-                    <!-- Row 2 -->
-                    <android.support.v7.widget.CardView
-                        android:layout_height="wrap_content"
-                        android:layout_width="0dp"
-                        android:layout_columnWeight="1"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginRight="6dp"
-                        app:cardElevation="6dp"
-                        app:cardCornerRadius="2dp"
-                        android:onClick="openCalendar">
-
-                        <LinearLayout
-                            android:layout_gravity="center_horizontal|center_vertical"
-                            android:orientation="horizontal"
-                            android:layout_margin="16dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-
-
-                            <TextView
-                                android:layout_centerHorizontal="true"
-                                android:text="Open Med Calendar"
-                                android:textColor="@color/colorFont"
-                                android:textSize="25sp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-
-                        </LinearLayout>
-
-                    </android.support.v7.widget.CardView>
-
 
                 </GridLayout>
 
